# big-launcher

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
config/: config.h.in  config.ini.in  launcher.manifest.in  layout.xml.in
src/: CMakeLists.txt  basic_lazy_file_sink.hpp  image.cpp  image.hpp  layout.cpp  layout.hpp  main.cpp  main.hpp  screensaver.cpp  screensaver.hpp  sound.cpp  sound.hpp  util.cpp  util.hpp
src/platform/: CMakeLists.txt  platform.hpp  unix.cpp  unix.hpp  win32.cpp
